# fileman

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fileman/: __init__.py  _filelist.py  _genlist.py  _modfilelist.py  envars.py  filemanager.py  paths.py
